--- a/src/app/sistema/estoque/produtos/view-produto/view-produto.component.html
+++ b/src/app/sistema/estoque/produtos/view-produto/view-produto.component.html
@@ -325,7 +325,19 @@
                   form-floating
                 "
               >
-                <select
+                <input
+                  class="
+                    form-control
+                    h-limited-sm
+                    px-4
+                    py-3
+                    rounded-15
+                    shadow-sm
+                  "
+                  type="text"
+                  formControlName="id"
+                />
+                <!-- <select
                   class="
                     form-select
                     h-limited-sm
@@ -343,7 +355,7 @@
                   >
                     {{ fornecedor.fantasy_name }}
                   </option>
-                </select>
+                </select> -->
               </div>
             </div>
           </div>
