--- a/src/app/sistema/estoque/fornecedores/fornecedores.component.html
+++ b/src/app/sistema/estoque/fornecedores/fornecedores.component.html
@@ -1,25 +1,8 @@
 <div class="row m-0 justify-content-center align-items-center">
     <!-- Pesquisar -->
     <div class="col-4 px-2 p-0 m-0 position-relative">
-        <input [(ngModel)]="search" (input)="pesquisaFornecedores()" class="
-        form-control form-control-lg
-        border-0
-        h-limited
-        py-2
-        ps-4
-        pe-5
-        rounded-15
-        shadow-sm
-      " type="text" placeholder="Pesquisar" />
-        <a class="
-        fs-4
-        position-absolute
-        translate-middle
-        top-50
-        me-4
-        end-0
-        text-custom-dark
-      ">
+        <input [(ngModel)]="search" (input)="pesquisaFornecedores()" class="form-control form-control-lg border-0 h-limited py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar" />
+        <a class="fs-4 position-absolute translate-middle top-50 me-4 end-0 text-custom-dark">
             <i class="bi-search"></i>
             <!-- <i class="bi-search my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i> -->
         </a>
@@ -28,16 +11,7 @@
     <!-- Adicionar fornecedor -->
     <div class="col-1 px-2 p-0 m-0 text-center">
         <a class="px-2 py-2" data-bs-toggle="modal" data-bs-target="#adicionarFornecedor">
-            <i class="
-          bi-plus-square-fill
-          icon-view
-          my-auto
-          fs-3
-          p-2
-          m-0
-          fw-bold
-          text-custom-dark
-        "></i>
+            <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
         </a>
     </div>
 </div>
@@ -61,13 +35,13 @@
 <!-- Tabela -->
 <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center" *ngFor="let fornecedor of fornecedoresFiltrados">
     <div class="col-3">
-        <p>{{ fornecedor.fantasy_name }}</p>
+        <p>{{ fornecedor?.fantasy_name }}</p>
     </div>
     <div class="col-3">
-        <p>{{ fornecedor.contacts[0].tel_1 }}</p>
+        <p>{{ fornecedor.contacts[0]?.tel_1 }}</p>
     </div>
     <div class="col-3">
-        <p>{{ fornecedor.contacts[0].email }}</p>
+        <p>{{ fornecedor.contacts[0]?.email }}</p>
     </div>
     <div class="col text-end">
         <a data-bs-toggle="modal" data-bs-target="#viewFornecedor" (click)="loadFornecedorView(fornecedor)">
