--- a/src/app/sistema/compras/pedidos-compras/view-pedido/view-pedido.component.html
+++ b/src/app/sistema/compras/pedidos-compras/view-pedido/view-pedido.component.html
@@ -35,7 +35,6 @@
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
                 placeholder="Loja"
-                formControlName="id"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Loja</label
@@ -233,13 +232,7 @@
             <!-- Informações adicionais -->
             <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
               <textarea
-                class="
-                  form-control form-control-lg
-                  px-4
-                  py-3
-                  rounded-15
-                  shadow-sm
-                "
+                class="form-control form-control-lg px-4 py-3 rounded-15 shadow-sm"
                 placeholder="Informações adicionais"
                 style="height: 150px"
                 formControlName="obs"
