--- a/src/app/sistema/compras/pedidos-compras/listar-pedidos-compras/listar-pedidos-compras.component.html
+++ b/src/app/sistema/compras/pedidos-compras/listar-pedidos-compras/listar-pedidos-compras.component.html
@@ -17,16 +17,7 @@
             <div class="row mt-4 m-0 p-0">
                 <!-- Botão Adicionar -->
                 <div class="col-4 px-2 p-0 m-0">
-                    <a class="
-              rounded-15
-              py-1
-              px-4
-              bg-custom-success
-              h-100
-              d-flex
-              justify-content-between
-              shadow-sm
-            " routerLink="/sistema/compras/pedidos/criar">
+                    <a class="rounded-15 py-1 px-4 bg-custom-success h-100 d-flex justify-content-between shadow-sm" routerLink="/sistema/compras/pedidos/criar">
                         <h5 class="fw-normal my-auto text-truncate text-custom-dark">
                             Adicionar
                         </h5>
@@ -36,41 +27,15 @@
 
                 <!-- Pesquisar -->
                 <div class="col-4 px-2 p-0 m-0 position-relative">
-                    <input class="
-              form-control form-control-lg
-              border-0
-              h-limited-sm
-              py-2
-              ps-4
-              pe-5
-              rounded-15
-              shadow-sm
-            " type="text" placeholder="Pesquisar" />
-                    <a>
-                        <i class="
-                bi-search
-                fs-4
-                position-absolute
-                translate-middle
-                top-50
-                me-4
-                end-0
-              "></i>
+                    <input [(ngModel)]="search" (input)="pesquisaPedidos()" class="form-control form-control-lg border-0 h-limited py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar" />
+                    <a class="fs-4 position-absolute translate-middle top-50 me-4 end-0 text-custom-dark">
+                        <i class="bi-search"></i>
                     </a>
                 </div>
 
                 <!-- Botão Filtro -->
                 <div class="col-4 px-2 p-0 m-0">
-                    <a class="
-              rounded-15
-              py-2
-              px-4
-              bg-white
-              h-limited
-              d-flex
-              justify-content-between
-              shadow-sm
-            ">
+                    <a class="rounded-15 py-2 px-4 bg-white h-limited d-flex justify-content-between shadow-sm">
                         <h5 class="fw-normal my-auto text-truncate text-custom-dark">
                             Filtro
                         </h5>
@@ -92,11 +57,11 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="align-items-center" *ngFor="let pedidos of pedidos">
+                        <tr class="align-items-center" *ngFor="let pedidos of pedidosFiltrados">
                             <th scope="row">{{ pedidos.codigo }}</th>
-                            <td>{{ pedidos.data }}</td>
-                            <td>{{ pedidos.fornecedor }}</td>
-                            <td>{{ pedidos.total | currency: "BRL" }}</td>
+                            <td>{{ pedidos?.data }}</td>
+                            <td>{{ pedidos?.fornecedor }}</td>
+                            <td>{{ pedidos?.valorTotal | currency: "BRL" }}</td>
                             <td>
                                 <i class="fs-5 bi-eye-fill icon-view p-3" data-bs-toggle="modal" data-bs-target="#viewPedido" cursor="pointer"></i>
                                 <!-- <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i> -->
