--- a/src/app/sistema/estoque/produtos/produtos.component.html
+++ b/src/app/sistema/estoque/produtos/produtos.component.html
@@ -1,41 +1,15 @@
 <div class="row m-0 justify-content-center align-items-center">
     <!-- Pesquisar -->
     <div class="col-4 px-2 p-0 m-0 position-relative">
-        <input [(ngModel)]="search" (input)="pesquisaProdutos()" class="
-        form-control form-control-lg
-        border-0
-        h-limited
-        py-2
-        ps-4
-        pe-5
-        rounded-15
-        shadow-sm
-      " type="text" placeholder="Pesquisar" />
-        <a class="
-        fs-4
-        position-absolute
-        translate-middle
-        top-50
-        me-4
-        end-0
-        text-custom-dark
-      ">
+        <input [(ngModel)]="search" (input)="pesquisaProdutos()" class="form-control form-control-lg border-0 h-limited py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar" />
+        <a class="fs-4 position-absolute translate-middle top-50 me-4 end-0 text-custom-dark">
             <i class="bi-search"></i>
         </a>
     </div>
 
     <!-- Botão Filtro -->
     <div class="col-4 px-2 p-0 m-0">
-        <a data-bs-toggle="modal" data-bs-target="#filtrarProdutos" class="
-        rounded-15
-        py-2
-        px-4
-        bg-white
-        h-limited
-        d-flex
-        justify-content-between
-        shadow-sm
-      ">
+        <a data-bs-toggle="modal" data-bs-target="#filtrarProdutos" class="rounded-15 py-2 px-4 bg-white h-limited d-flex justify-content-between shadow-sm">
             <h5 class="fw-normal my-auto text-truncate text-custom-dark">Filtro</h5>
             <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark" data-bs-toggle="modal" data-bs-target="#filtrarProdutos"></i>
         </a>
@@ -44,16 +18,7 @@
     <!-- Adicionar produtos -->
     <div class="col-1 px-2 p-0 m-0 text-center">
         <a class="px-2 py-2" data-bs-toggle="modal" data-bs-target="#adicionarProdutos">
-            <i class="
-          bi-plus-square-fill
-          icon-view
-          my-auto
-          fs-3
-          p-2
-          m-0
-          fw-bold
-          text-custom-dark
-        "></i>
+            <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
         </a>
     </div>
 </div>
