--- a/src/app/sistema/compras/pedidos-compras/view-pedido/view-pedido.component.html
+++ b/src/app/sistema/compras/pedidos-compras/view-pedido/view-pedido.component.html
@@ -11,33 +11,29 @@
                     <button type="button" class="btn-close" #close data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body px-4">
-                    <!-- Tributação -->
+                    <!-- Info Pedido -->
                     <div class="row pt-3 p-0 m-0 border-bottom pb-4">
                         <div class="col-12 px-2 m-0 p-0">
                             <h5 class="fw-bold text-custom-dark m-0 p-0">Dados Gerais</h5>
                         </div>
 
-                        <!-- Origem do produto conforme ICMS -->
-                        <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
-                            <select class="form-select h-limited-sm px-4 py-1 rounded-15 shadow-sm" formControlName="data">
-                <option selected disabled>Selecione uma origem</option>
-                <option value="origem1">origem1</option>
-                <option value="origem2">origem2</option>
-                <option value="origem3">origem3</option>
-              </select>
-                            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Origem do produto conforme ICMS</label
+                        <!-- Data -->
+                        <div class="col-8 px-2 pt-4 p-0 m-0 form-floating">
+                            <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="data" formControlName="data" />
+                            <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data</label
               >
             </div>
 
-            <!-- NCM -->
+            <!-- Fornecedor -->
             <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="Loja"
+                placeholder="Fornecedor"
+                formControlName="fornecedor"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Loja</label
+                >Fornecedor</label
               >
             </div>
 
@@ -46,11 +42,11 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="vendedor"
-                formControlName="data"
+                placeholder="razao social"
+                formControlName="razaoSocial"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Vendedor</label
+                >Razao Social</label
               >
             </div>
 
@@ -59,11 +55,11 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="cliente"
-                formControlName="fornecedor"
+                placeholder="cnpj"
+                formControlName="cnpj"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >cliente</label
+                >CNPJ</label
               >
             </div>
 
@@ -72,11 +68,11 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="cond_pagamento"
-                formControlName="razaoSocial"
+                placeholder="cep"
+                formControlName="cep"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >cond_pagamento</label
+                >cep</label
               >
             </div>
 
@@ -85,11 +81,11 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="pag_personalizado"
-                formControlName="cnpj"
+                placeholder="endereco"
+                formControlName="endereco"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >pag_personalizado</label
+                >endereco</label
               >
             </div>
 
@@ -98,11 +94,11 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="tab_preco"
-                formControlName="cep"
+                placeholder="complemento"
+                formControlName="complemento"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >tab_preco</label
+                >complemento</label
               >
             </div>
 
@@ -111,11 +107,11 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="tab_personalizado"
-                formControlName="endereco"
+                placeholder="condicao de pagamento"
+                formControlName="condPagamento"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >tab_personalizado</label
+                >Condicao de pagamento</label
               >
             </div>
 
@@ -124,11 +120,23 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="Desconto"
-                formControlName="complemento"
+                placeholder="meioPag"
+                formControlName="meioPag"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Desconto</label
+                >Meio de Pagamento</label
+              >
+            </div>
+            <!-- Status -->
+            <div class="col-4 px-2 pt-4 p-0 m-0 form-floating">
+              <input
+                class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
+                type="text"
+                placeholder="status"
+                formControlName="status"
+              />
+              <label class="ms-2 mt-3 small text-truncate text-custom-dark"
+                >Status do Pedido</label
               >
             </div>
 
@@ -137,11 +145,11 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="Tipo Entrega"
-                formControlName="subtotal"
+                placeholder="data vencimento"
+                formControlName="dataVenc"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Tipo Entrega</label
+                >Data Vencimento</label
               >
             </div>
           </div>
@@ -149,7 +157,7 @@
           <!-- Características -->
           <div class="row pt-3 p-0 m-0 border-bottom pb-4">
             <div class="col-12 px-2 m-0 p-0">
-              <h5 class="fw-bold text-custom-dark m-0 p-0">Valor</h5>
+              <h5 class="fw-bold text-custom-dark m-0 p-0">Valores</h5>
             </div>
 
             <!-- Descrição -->
@@ -157,8 +165,8 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="Descrição"
-                formControlName="desconto"
+                placeholder="subtotal"
+                formControlName="subtotal"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Subtotal</label
@@ -170,8 +178,8 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="Largura"
-                formControlName="frete"
+                placeholder="desconto"
+                formControlName="desconto"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Desconto</label
@@ -183,8 +191,8 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="Altura"
-                formControlName="encargos"
+                placeholder="frete"
+                formControlName="frete"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Frete</label
@@ -196,8 +204,8 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="Peso"
-                formControlName="valorTotal"
+                placeholder="encargos"
+                formControlName="encargos"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Encargos</label
@@ -209,26 +217,14 @@
               <input
                 class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
                 type="text"
-                placeholder="Itens por caixa"
-                formControlName="condPagamento"
+                placeholder="valorTotal"
+                formControlName="valorTotal"
               />
               <label class="ms-2 mt-3 small text-truncate text-custom-dark"
                 >Total da Compra</label
               >
             </div>
 
-            <!-- Itens por caixa -->
-            <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-              <input
-                class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm"
-                type="text"
-                placeholder="Itens por caixa"
-                formControlName="meioPag"
-              />
-              <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-                >Total da Compra</label
-              >
-            </div>
             <!-- Informações adicionais -->
             <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
               <textarea
