--- a/src/app/sistema/estoque/estoque-produtos/estoque-produtos.component.html
+++ b/src/app/sistema/estoque/estoque-produtos/estoque-produtos.component.html
@@ -1,25 +1,8 @@
 <div class="row m-0 justify-content-center align-items-center">
     <!-- Pesquisar -->
     <div class="col-4 px-2 p-0 m-0 position-relative">
-        <input [(ngModel)]="search" (input)="pesquisaProdutos()" class="
-        form-control form-control-lg
-        border-0
-        h-limited
-        py-2
-        ps-4
-        pe-5
-        rounded-15
-        shadow-sm
-      " type="text" placeholder="Pesquisar" />
-        <a class="
-        fs-4
-        position-absolute
-        translate-middle
-        top-50
-        me-4
-        end-0
-        text-custom-dark
-      ">
+        <input [(ngModel)]="search" (input)="pesquisaProdutos()" class="form-control form-control-lg border-0 h-limited py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar" />
+        <a class="fs-4 position-absolute translate-middle top-50 me-4 end-0 text-custom-dark">
             <i class="bi-search"></i>
         </a>
     </div>
@@ -27,16 +10,7 @@
     <!-- Adicionar -->
     <div class="col-1 px-2 p-0 m-0 text-center">
         <a class="px-2 py-2" data-bs-toggle="modal" data-bs-target="#adicionarProdutoEstoque">
-            <i class="
-          bi-plus-square-fill
-          icon-view
-          my-auto
-          fs-3
-          p-2
-          m-0
-          fw-bold
-          text-custom-dark
-        "></i>
+            <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
         </a>
     </div>
 </div>
@@ -72,25 +46,25 @@
 <!-- Tabela -->
 <div class="row m-0 mt-3 border-bottom text-custom-dark" *ngFor="let produto of produtosFiltrados">
     <div class="col-1">
-        <p>{{ produto.id }}</p>
+        <p>{{ produto?.id }}</p>
     </div>
     <div class="col-2">
-        <p>{{ produto.nome }}</p>
+        <p>{{ produto?.nome }}</p>
     </div>
     <div class="col-1">
-        <p>{{ produto.unidade }}</p>
+        <p>{{ produto?.unidade }}</p>
     </div>
     <div class="col-1">
-        <p>{{ produto.custoMedio | currency: "BRL" }}</p>
+        <p>{{ produto?.custoMedio | currency: "BRL" }}</p>
     </div>
     <div class="col-2">
-        <p>{{ produto.precoMedio | currency: "BRL" }}</p>
+        <p>{{ produto?.precoMedio | currency: "BRL" }}</p>
     </div>
     <div class="col-1">
-        <p>{{ produto.atual }}</p>
+        <p>{{ produto?.atual }}</p>
     </div>
     <div class="col-2">
-        <p>{{ produto.margemLucro | currency: "BRL" }}</p>
+        <p>{{ produto?.margemLucro | currency: "BRL" }}</p>
     </div>
     <div class="col-2 text-end">
         <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer" routerLink="/sistema/estoque/detalhe/{{ produto.id }}"></i>
