--- a/src/app/sistema/estoque/estoque-produtos/view-estoque-produto/view-estoque-produto.component.html
+++ b/src/app/sistema/estoque/estoque-produtos/view-estoque-produto/view-estoque-produto.component.html
@@ -496,24 +496,10 @@
         </div>
 
         <!-- Modal footer -->
-        <div class="row m-0 py-3 modal-footer">
-          <!-- Cancelar -->
-          <div class="col-3 px-2 p-0 m-0 d-grid">
-            <button
-              data-bs-dismiss="modal"
-              type="reset"
-              class="h-limited-sm btn rounded-15 py-1 px-4 bg-light shadow-sm text-start"
-            >
-              <h5
-                class="fw-normal my-auto text-truncate text-custom-dark text-center"
-              >
-                Cancelar
-              </h5>
-            </button>
-          </div>
-        </div>
+        <div class="row m-0 py-3 modal-footer"></div>
       </div>
       <!-- /Modal content -->
     </form>
   </div>
 </div>
+<app-relatorio-produtos-view></app-relatorio-produtos-view>
