--- a/src/app/sistema/rh/listar-colaboradores/listar-colaboradores.component.html
+++ b/src/app/sistema/rh/listar-colaboradores/listar-colaboradores.component.html
@@ -69,7 +69,8 @@
                     <h5 class="fw-bold text-truncate">Loja</h5>
                 </div>
                 <div class="col-2 d-flex justify-content-end">
-                    <i class="fs-5 bi-search icon-search px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer" data-bs-toggle="modal" data-bs-target="#pesquisarPedidos"></i>
+                    <i class="fs-5 bi-search icon-search px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer" data-bs-toggle="modal" data-bs-target="#pesquisarColaborador"></i>
+                    <i class="fs-5 bi-funnel icon-filter px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer" data-bs-toggle="modal" data-bs-target="#filtrarColaboradores"></i>
                 </div>
             </div>
             <!-- Tabela -->
@@ -104,3 +105,4 @@
     </div>
 </div>
 <app-pesquisar-colaborador></app-pesquisar-colaborador>
+<app-filtrar-colaboradores></app-filtrar-colaboradores>
