--- a/src/app/sistema/rh/listar-colaboradores/pesquisar-colaborador/pesquisar-colaborador.component.html
+++ b/src/app/sistema/rh/listar-colaboradores/pesquisar-colaborador/pesquisar-colaborador.component.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="modal fade" id="pesquisarPedidos" tabindex="-1" aria-labelledby="pesquisarPedidosLabel" aria-hidden="true" aria-label="Close">
+<div class="modal fade" id="pesquisarColaborador" tabindex="-1" aria-labelledby="pesquisarColaboradorLabel" aria-hidden="true" aria-label="Close">
     <div class="modal-dialog modal-xl">
         <!-- Modal content -->
         <div class="modal-content rounded-15 bg-custom-light">
