--- a/src/app/sistema/compras/pedidos-compras/listar-pedidos-compras/listar-pedidos-compras.component.html
+++ b/src/app/sistema/compras/pedidos-compras/listar-pedidos-compras/listar-pedidos-compras.component.html
@@ -35,7 +35,7 @@
 
                 <!-- Botão Filtro -->
                 <div class="col-4 px-2 p-0 m-0">
-                    <a data-bs-toggle="modal" data-bs-target="filtrarPedidos" class="rounded-15 py-2 px-4 bg-white h-limited d-flex justify-content-between shadow-sm">
+                    <a data-bs-toggle="modal" data-bs-target="#filtrarPedidos" class="rounded-15 py-2 px-4 bg-white h-limited d-flex justify-content-between shadow-sm">
                         <h5 class="fw-normal my-auto text-truncate text-custom-dark">
                             Filtro
                         </h5>
@@ -59,7 +59,7 @@
                     <tbody>
                         <tr class="align-items-center" *ngFor="let pedidos of pedidosFiltrados">
                             <th scope="row">{{ pedidos?.id }}</th>
-                            <td>{{ pedidos?.data }}</td>
+                            <td>{{ pedidos?.data | date: "dd/MM/yyyy" }}</td>
                             <td>{{ pedidos?.fornecedor }}</td>
                             <td>{{ pedidos?.valorTotal | currency: "BRL" }}</td>
                             <td>{{ pedidos?.status }}</td>
