--- a/src/app/sistema/rh/listar-colaboradores/filtrar-colaboradores/filtrar-colaboradores.component.html
+++ b/src/app/sistema/rh/listar-colaboradores/filtrar-colaboradores/filtrar-colaboradores.component.html
@@ -1,42 +1,39 @@
 <!-- Modal -->
-<div class="modal fade" id="filtrarPedidos" tabindex="-1" aria-labelledby="filtrarPedidosLabel" aria-hidden="true" aria-label="Close">
+<div class="modal fade" id="filtrarColaboradores" tabindex="-1" aria-labelledby="filtrarColaboradoresLabel" aria-hidden="true" aria-label="Close">
     <div class="modal-dialog modal-xl">
         <!-- Modal content -->
         <div class="modal-content rounded-15 bg-custom-light">
             <div class="modal-header px-4">
                 <h5 class="modal-title text-custom-dark" id="filtrarColaboradoresLabel">
-                    Filtrar Pedidos
+                    Filtrar Colaboradores
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body px-4">
                 <div class="row">
                     <div class="col px-2 pt-4 p-0 m-0 form-floating">
-                        <input (keyup)="filtrarData($event)" class="form-control form-control-lg border-0 h-50 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Departamento" />
-                        <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data</label
+                        <input (keyup)="filtrarDepartamento($event)" class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Departamento" />
+                        <label class="ms-2 mt-3 small text-truncate text-custom-dark">Departamento</label
             >
+
+            <i
+              class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"
+            ></i>
           </div>
           <div class="col px-2 pt-4 p-0 m-0 form-floating">
             <input
-              (keyup)="filtrarValor($event)"
+              (keyup)="filtrarLoja($event)"
               class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm"
               type="text"
               placeholder="Loja"
             />
             <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-              >Valor Total</label
+              >Loja</label
             >
-          </div>
-          <div class="col px-2 pt-4 p-0 m-0 form-floating">
-            <input
-              (keyup)="filtrarStatus($event)"
-              class="form-control form-control-lg border-0 h-100 py-2 ps-4 pe-5 rounded-15 shadow-sm"
-              type="text"
-              placeholder="Loja"
-            />
-            <label class="ms-2 mt-3 small text-truncate text-custom-dark"
-              >Status do Pedido</label
-            >
+
+            <i
+              class="bi-search fs-4 position-absolute translate-middle top-60 me-4 end-0"
+            ></i>
           </div>
         </div>
 
@@ -44,44 +41,53 @@
         <!-- Títulos da Tabela -->
         <div class="row m-0 my-5 text-custom-dark justify-content-center">
           <div class="col-2">
-            <h5 class="fw-bold text-truncate">Codigo</h5>
+            <h5 class="fw-bold text-truncate">Nome</h5>
           </div>
           <div class="col-2">
-            <h5 class="fw-bold text-truncate">Data</h5>
+            <h5 class="fw-bold text-truncate">Cargo</h5>
           </div>
           <div class="col-2">
-            <h5 class="fw-bold text-truncate">Fornecedor</h5>
+            <h5 class="fw-bold text-truncate">Departamento</h5>
           </div>
           <div class="col-2">
-            <h5 class="fw-bold text-truncate">Total</h5>
+            <h5 class="fw-bold text-truncate">Admissão</h5>
           </div>
           <div class="col-2">
-            <h5 class="fw-bold text-truncate">Status</h5>
+            <h5 class="fw-bold text-truncate">Loja</h5>
+          </div>
+          <div class="col-2">
+            <h5 class="fw-bold text-truncate d-none">Ações</h5>
           </div>
         </div>
         <!-- Tabela -->
         <div
           class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center"
-          *ngFor="let pedido of pedidos"
+          *ngFor="let rh of colaboradores"
         >
           <div class="col-2">
-            <p>{{ pedido?.id }}</p>
+            <p>{{ rh.name }} {{ rh.surname }}</p>
           </div>
           <div class="col-2">
-            <p>{{ pedido?.data }}</p>
+            <p>{{ rh.role }}</p>
           </div>
           <div class="col-2">
-            <p>{{ pedido?.fornecedor }}</p>
+            <p>{{ rh.department }}</p>
           </div>
           <div class="col-2">
-            <p>{{ pedido?.valorTotal | currency: "BRL" }}</p>
+            <p>{{ rh.admission | date }}</p>
           </div>
           <div class="col-2">
-            <p>{{ pedido?.status }}</p>
+            <p>{{ rh.filial }}</p>
           </div>
           <div class="col-2 text-end">
             <i
-              class="fs-5 bi-eye-fill icon-view p-3"
+              class="fs-5 bi-circle-fill p-3"
+              [class]="rh.status == 1 ? 'text-success' : 'text-danger'"
+              cursor="pointer"
+            ></i>
+            <i
+              class="fs-5 bi-pen-fill icon-edit p-3"
+              routerLink="/sistema/rh/editar/{{ rh.id }}"
               cursor="pointer"
               data-bs-dismiss="modal"
               aria-label="Close"
@@ -89,7 +95,7 @@
             <i
               class="fs-5 bi-trash-fill icon-delete p-3"
               cursor="pointer"
-              (click)="deletePedido(pedido.id)"
+              (click)="deleteRh(rh.id)"
               data-bs-dismiss="modal"
               aria-label="Close"
             ></i>
